syntax = "proto3";

package pb;
option go_package = "/pb";

// The request message containing the order.
message GetOrderRequest {
  int64 order_id = 1;
}

// The response message containing the order .
message GetOrderResponse {
  bool sucesss = 1;
  int64 order_id = 2;
  int64 customer_id = 3;
  repeated Item items = 4;
}

message Item {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
  int32 quantity = 4;
}